@@ -1,3 +1,7 @@
+2009-03-17  smeghead <smeghead@users.sourceforge.jp>
+
+    * copyrightの表記を2009に更新した。
+
 2009-03-16  smeghead <smeghead@users.sourceforge.jp>
 
     * 統計情報グラフのサイズ指定をStarbug1 1.1系のサイズ指定にした。
